apps/05-keycloak/httproute.yaml
# Copyright 2023-2026 Airbus, CS Group
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
spec:
  hostnames:
    - iam.dev-rspy-ovh.esa-copernicus.eu
  parentRefs:
    - name: keycloak
      kind: ListenerSet
      namespace: iam
  rules:
    - backendRefs:
        - name: keycloak-service
          port: 8080
          kind: Service
